# glslbuilder

./: CMakeLists.txt  CMakePresets.json  Doxyfile  build_dependencies.ps1  readme.md
cmake_modules/: config.cmake.in
docs/: gls2.md  hls2.md  properties.md
glslbuilder/: CMakeLists.txt
glslbuilder/include/glslbuilder/: ArgList.hh  ArgListCommons.hh  ArgParser.hh  ArgParserCommons.hh  Builder.hh  BuilderCommons.hh  CommonExceptions.hh  EntrypointPreprocessor.hh  GLSLBuilder.hh  GLSLBuilderAPI.hh  GLSLBuilderVersion.hh  GLSLBuilderVersion.hh.in  Preprocessor.hh  SolutionParser.hh  SolutionParserCommons.hh  Source.hh  TextSource.hh
glslbuilder/include/private/: glslbpch.hh
glslbuilder/include/private/Utils/: FileHandler.hh  StringHandler.hh
glslbuilder/lib/: ArgList.cc  ArgListCommons.cc  ArgParser.cc  ArgParserCommons.cc  Builder.cc  BuilderCommons.cc  CommonExceptions.cc  EntrypointPreprocessor.cc  FileHandler.cc  SolutionParser.cc  SolutionParserCommons.cc  Source.cc  StringHandler.cc  TextSource.cc
glslbuilder_exec/: CMakeLists.txt
glslbuilder_exec/include/: Console.hh  Helper.hh
glslbuilder_exec/lib/: Console.cc  Helper.cc  entry.cc
glslbuilder_tests/: CMakeLists.txt
glslbuilder_tests/assets/test_sample/: errorSourcesD3DC.gls2  errorSourcesDXC.gls2  invalidArray.gls2  invalidEntrypointName.gls2  invalidName.gls2  invalidName.glsl  invalidPath.gls2  invalidProperties.gls2  invalidVersion.gls2  multipush.gls2  multipush.glsl  nonclosing.gls2  nonclosing.glsl  regexUnmatch.gls2  test.glsl  texture.glsl  unmatch.glsl  valid.gls2  validSources.gls2
glslbuilder_tests/lib/: ArgListTests.cc  ArgParserTests.cc  BuilderTests.cc  SolutionParserTests.cc
hlslbuilder/: CMakeLists.txt
hlslbuilder/include/hlslbuilder/: ArgList.hh  ArgListCommons.hh  ArgParser.hh  ArgParserCommons.hh  Builder.hh  BuilderCommons.hh  CommonExceptions.hh  GraphicsSource.hh  HLSLBuilder.hh  SolutionParser.hh  SolutionParserCommons.hh  Source.hh
hlslbuilder/include/private/: hlslbpch.hh
hlslbuilder/include/private/Utils/: FileHandler.hh
hlslbuilder/lib/: ArgList.cc  ArgListCommons.cc  ArgParser.cc  ArgParserCommons.cc  Builder.cc  BuilderCommons.cc  CommonExceptions.cc  GraphicsSource.cc  SolutionParser.cc  SolutionParserCommons.cc  Source.cc  StringHandler.cc
hlslbuilder_exec/: CMakeLists.txt
hlslbuilder_exec/include/: Console.hh  Helper.hh
hlslbuilder_exec/lib/: Console.cc  Helper.cc  entry.cc
hlslbuilder_tests/: CMakeLists.txt
hlslbuilder_tests/assets/test_sample/: error.hlsl  invalidArray.hls2  invalidName.hls2  validD3DCSources.hls2  validDXCSources.hls2
hlslbuilder_tests/lib/: ArgListTests.cc  ArgParserTests.cc  BuilderTests.cc  SolutionParserTests.cc
