cmake_minimum_required(VERSION 3.22)

file(GLOB_RECURSE SM_HDRS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "./include/*.hh")
file(GLOB_RECURSE SM_SRCS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "./lib/*.cc")

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_PREFIX_PATH})

find_package(jsoncpp REQUIRED)

set(LIB_POSTFIX d)

set(LIB_NAME ${CMAKE_PROJECT_NAME})
add_library(${LIB_NAME} SHARED ${SM_HDRS} ${SM_SRCS})
target_precompile_headers(${LIB_NAME} PRIVATE ./include/private/glslbpch.hh)
target_include_directories(${LIB_NAME} PUBLIC $<BUILD_INTERFACE:${CMAKE_PREFIX_PATH}/include> $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/GLSLBuilder> $<INSTALL_INTERFACE:./include>)
target_include_directories(${LIB_NAME} PRIVATE $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/private>)
target_link_directories(${LIB_NAME} PRIVATE $<BUILD_INTERFACE:${CMAKE_PREFIX_PATH}/lib>)
target_link_libraries(${LIB_NAME} PUBLIC jsoncpp_lib)
target_compile_definitions(${LIB_NAME} PUBLIC GLSLB_DYNAMIC_LINK)
target_compile_definitions(${LIB_NAME} PRIVATE GLSLB_BUILD_DLL)
if(WIN32)
    target_compile_definitions(${LIB_NAME} PUBLIC GLSLB_WINDOWS)
    set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
endif()

set_target_properties(${LIB_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_PREFIX_PATH}/bin")
set_target_properties(${LIB_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_PREFIX_PATH}/bin")
set_target_properties(${LIB_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_PREFIX_PATH}/bin")
set_target_properties(${LIB_NAME} PROPERTIES LIBRARY_OUTPUT_DIRECTORY "${CMAKE_PREFIX_PATH}/lib")
set_target_properties(${LIB_NAME} PROPERTIES LIBRARY_OUTPUT_DIRECTORY_DEBUG "${CMAKE_PREFIX_PATH}/lib")
set_target_properties(${LIB_NAME} PROPERTIES LIBRARY_OUTPUT_DIRECTORY_RELEASE "${CMAKE_PREFIX_PATH}/lib")
set_target_properties(${LIB_NAME} PROPERTIES CXX_STANDARD 17)
set_target_properties(${LIB_NAME} PROPERTIES DEBUG_POSTFIX ${LIB_POSTFIX})

set(LIB_NAME ${CMAKE_PROJECT_NAME}_static)
add_library(${LIB_NAME} STATIC ${SM_HDRS} ${SM_SRCS})
target_precompile_headers(${LIB_NAME} PRIVATE ./include/private/glslbpch.hh)
target_include_directories(${LIB_NAME} PUBLIC $<BUILD_INTERFACE:${CMAKE_PREFIX_PATH}/include> $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/GLSLBuilder> $<INSTALL_INTERFACE:./include>)
target_include_directories(${LIB_NAME} PRIVATE $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/private>)
target_link_directories(${LIB_NAME} PRIVATE $<BUILD_INTERFACE:${CMAKE_PREFIX_PATH}/lib>)
target_link_libraries(${LIB_NAME} PUBLIC jsoncpp_static)
target_compile_definitions(${LIB_NAME} PUBLIC)

if(WIN32)
    target_compile_definitions(${LIB_NAME} PUBLIC GLSLB_WINDOWS)
endif()

set_target_properties(${LIB_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_PREFIX_PATH}/bin")
set_target_properties(${LIB_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_PREFIX_PATH}/bin")
set_target_properties(${LIB_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_PREFIX_PATH}/bin")
set_target_properties(${LIB_NAME} PROPERTIES LIBRARY_OUTPUT_DIRECTORY "${CMAKE_PREFIX_PATH}/lib")
set_target_properties(${LIB_NAME} PROPERTIES LIBRARY_OUTPUT_DIRECTORY_DEBUG "${CMAKE_PREFIX_PATH}/lib")
set_target_properties(${LIB_NAME} PROPERTIES LIBRARY_OUTPUT_DIRECTORY_RELEASE "${CMAKE_PREFIX_PATH}/lib")
set_target_properties(${LIB_NAME} PROPERTIES CXX_STANDARD 17)
set_target_properties(${LIB_NAME} PROPERTIES DEBUG_POSTFIX ${LIB_POSTFIX})


file(READ ${CMAKE_CURRENT_SOURCE_DIR}/include/glslbuilder/GLSLBuilderVersion.hh.in HEADER_CONTENTS)
string(REGEX REPLACE "CMAKE_VERSION" "${CMAKE_PROJECT_VERSION}" OUTPUT_HEADER ${HEADER_CONTENTS})
file(WRITE ${CMAKE_CURRENT_SOURCE_DIR}/include/glslbuilder/GLSLBuilderVersion.hh ${OUTPUT_HEADER})

set(GLSL_BUILDER_GENERATED_DIR "${CMAKE_CURRENT_BINARY_DIR}/generated")
set(GLSL_BUILDER_VERSION_CONFIG "${GLSL_BUILDER_GENERATED_DIR}/${PROJECT_NAME}ConfigVersion.cmake")
set(GLSL_BUILDER_PROJECT_CONFIG "${GLSL_BUILDER_GENERATED_DIR}/${PROJECT_NAME}Config.cmake")
set(GLSL_BUILDER_TARGETS_EXPORT_NAME "${PROJECT_NAME}Targets")
set(GLSL_BUILDER_CONFIG_INSTALL_DIR "lib/cmake/${PROJECT_NAME}")
set(GLSL_BUILDER_NAMESPACE "${PROJECT_NAME}::")
set(GLSL_BUILDER_VERSION ${PROJECT_VERSION})

include(CMakePackageConfigHelpers)
write_basic_package_version_file(
    "${GLSL_BUILDER_VERSION_CONFIG}" VERSION ${GLSL_BUILDER_VERSION} COMPATIBILITY SameMajorVersion
)
configure_file("${PROJECT_SOURCE_DIR}/cmake_modules/config.cmake.in" "${GLSL_BUILDER_PROJECT_CONFIG}" @ONLY)

# Install cmake config files
install(
    FILES "${GLSL_BUILDER_PROJECT_CONFIG}" "${GLSL_BUILDER_VERSION_CONFIG}"
    DESTINATION "${GLSL_BUILDER_CONFIG_INSTALL_DIR}")
# Install cmake targets files
install(
    EXPORT "${GLSL_BUILDER_TARGETS_EXPORT_NAME}"
    NAMESPACE "${GLSL_BUILDER_NAMESPACE}"
    DESTINATION "${GLSL_BUILDER_CONFIG_INSTALL_DIR}")

install(TARGETS ${CMAKE_PROJECT_NAME} ${CMAKE_PROJECT_NAME}_static
        EXPORT ${GLSL_BUILDER_TARGETS_EXPORT_NAME}
        RUNTIME DESTINATION "${INSTALL_BIN_DIR}"
        ARCHIVE DESTINATION "${INSTALL_LIB_DIR}"
        LIBRARY DESTINATION "${INSTALL_LIB_DIR}")

install(
    DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/include/GLSLBuilder"
    DESTINATION "${CMAKE_INSTALL_PREFIX}/include"
    FILES_MATCHING PATTERN "*.hh")